Updated team's emails and fixed bug.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,7 @@
         <meta name="twitter:description" content="TEDxISTAlameda."/>
         <meta name="twitter:title" content="TEDxISTAlameda"/>
         <meta name="twitter:site" content="@TEDxISTAlameda"/>
-        <!--<meta name="twitter:image" content="https://tedxistalameda.com/images/tedxistalameda_social.jpg"/> -->
-		
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link href="css/tedxistalameda.css" rel="stylesheet" type='text/css'>
-		<link href="css/team.css" rel="stylesheet" type='text/css'>
-        
+        <!--<meta name="twitter:image" content="https://tedxistalameda.com/images/tedxistalameda_social.jpg"/> -->        
 
 		<link rel="stylesheet" type="text/css" href="ButtonComponentMorph/css/component.css" />
 		<link rel="stylesheet" type="text/css" href="ButtonComponentMorph/css/content.css" />
@@ -33,6 +28,10 @@
         <link href='http://fonts.googleapis.com/css?family=Raleway:400,800,300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="HoverEffectIdeas/css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="HoverEffectIdeas/css/set1.css" />
+		
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="css/tedxistalameda.css" rel="stylesheet" type='text/css'>
+		<link href="css/team.css" rel="stylesheet" type='text/css'>
 
 	</head>
 	
@@ -229,88 +228,88 @@
 							<div class="row_second">
 								<div class="head-team">
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="28" data-toggle="tooltip" data-placement="bottom" data-title="Ana Carvalho" data-description="Social Media Hacker"></div>
+										<div class="head-image" data-image-num="28" data-toggle="tooltip" data-placement="bottom" data-title="Ana Carvalho" data-description="Social Media Hacker" data-mail="anacarvalho"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
                                     	<div class="head-image" data-image-num="27" data-toggle="tooltip" data-placement="bottom" data-title="André Ferreira" data-description="Curator" data-mail="andre" data-linkedin="andrecnf" data-facebook="andrecnf"></div>
                                 	</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="26" data-toggle="tooltip" data-placement="bottom" data-title="Bárbara Costa" data-description="Communication Designer"></div>
+										<div class="head-image" data-image-num="26" data-toggle="tooltip" data-placement="bottom" data-title="Bárbara Costa" data-description="Communication Designer" data-mail="barbara" data-linkedin="bárbara-costa-810b42107" data-facebook="barbara.costa.71868964"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
 										<div class="head-image" data-image-num="25" data-toggle="tooltip" data-placement="bottom" data-title="Beatriz Lucas" data-description="Sponsor Manager" data-mail="bilu" data-linkedin="beatrizlucas95" data-facebook="beatriz.lucas.95"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="24" data-toggle="tooltip" data-placement="bottom" data-title="Beatriz Moreira" data-description="Senior Communication Manager"></div>
+										<div class="head-image" data-image-num="24" data-toggle="tooltip" data-placement="bottom" data-title="Beatriz Moreira" data-description="Senior Communication Manager" data-mail="beatriz" data-linkedin="beatriz-guimar%C3%A3es-de-carvalho-moreira-665604114" data-facebook="bia.moreira.967"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="23" data-toggle="tooltip" data-placement="bottom" data-title="Catarina Silveira" data-description="Visual Designer"></div>							
+										<div class="head-image" data-image-num="23" data-toggle="tooltip" data-placement="bottom" data-title="Catarina Silveira" data-description="Visual Designer" data-mail="catarina"></div>							
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="22" data-toggle="tooltip" data-placement="bottom" data-title="Cátia Fortunato" data-description="Video & Media Designer"></div>							
+										<div class="head-image" data-image-num="22" data-toggle="tooltip" data-placement="bottom" data-title="Cátia Fortunato" data-description="Video & Media Designer" data-mail="catia"></div>							
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="21" data-toggle="tooltip" data-placement="bottom" data-title="Filipa Catarro" data-description="Curator"></div>								
+										<div class="head-image" data-image-num="21" data-toggle="tooltip" data-placement="bottom" data-title="Filipa Catarro" data-description="Curator" data-mail="filipa"></div>								
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="20" data-toggle="tooltip" data-placement="bottom" data-title="Filipe Quintino" data-description="Sponsor Manager"></div>		
+										<div class="head-image" data-image-num="20" data-toggle="tooltip" data-placement="bottom" data-title="Filipe Quintino" data-description="Sponsor Manager" data-mail="filipe"></div>		
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="19" data-toggle="tooltip" data-placement="bottom" data-title="Francisco Silva" data-description="Marketing Hacker"></div>		
+										<div class="head-image" data-image-num="19" data-toggle="tooltip" data-placement="bottom" data-title="Francisco Silva" data-description="Marketing Hacker" data-mail="francisco"></div>		
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="18" data-toggle="tooltip" data-placement="bottom" data-title="Gil Belford" data-description="Curator & Public Relations"></div>		
+										<div class="head-image" data-image-num="18" data-toggle="tooltip" data-placement="bottom" data-title="Gil Belford" data-description="Curator & Public Relations" data-mail="gil" data-linkedin="gilbelford"></div>		
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="17" data-toggle="tooltip" data-placement="bottom" data-title="Gonçalo Deus" data-description="Video & Media Designer"></div>		
+										<div class="head-image" data-image-num="17" data-toggle="tooltip" data-placement="bottom" data-title="Gonçalo Deus" data-description="Video & Media Designer" data-mail="goncalo" data-linkedin="goncalodeus"></div>		
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
 										<div class="head-image" data-image-num="16" data-toggle="tooltip" data-placement="bottom" data-title="Inês Ferreira" data-description="Co-organizer" data-mail="ines" data-linkedin="inesjorgeferreira" data-facebook="ines.ferreira.54738"></div>		
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="15" data-toggle="tooltip" data-placement="bottom" data-title="Inês Silva" data-description="Curator"></div>
+										<div class="head-image" data-image-num="15" data-toggle="tooltip" data-placement="bottom" data-title="Inês Silva" data-description="Curator" data-mail="inessilva" data-linkedin="inesfsilva"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="14" data-toggle="tooltip" data-placement="bottom" data-title="Joana Nunes" data-description="Curator"></div>
+										<div class="head-image" data-image-num="14" data-toggle="tooltip" data-placement="bottom" data-title="Joana Nunes" data-description="Curator" data-mail="joananunes" data-linkedin="joana-nunes-b9a069111" data-facebook="joanacarita"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="13" data-toggle="tooltip" data-placement="bottom" data-title="Joana Palhinha" data-description="Communication Designer"></div>
+										<div class="head-image" data-image-num="13" data-toggle="tooltip" data-placement="bottom" data-title="Joana Palhinha" data-description="Communication Designer" data-mail="joana" data-linkedin="joana-alter-palhinha-961420110"></div>
 									</div>									
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
 										<div class="head-image" data-image-num="12" data-toggle="tooltip" data-placement="bottom" data-title="João Apura" data-description="Main Organizer" data-mail="joao" data-linkedin="joaoapura" data-facebook="joao.apura"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="11" data-toggle="tooltip" data-placement="bottom" data-title="João Carvalho" data-description="Curator"></div>
+										<div class="head-image" data-image-num="11" data-toggle="tooltip" data-placement="bottom" data-title="João Carvalho" data-description="Curator" data-mail="joaocarv" data-linkedin="joao-borges-s-carvalho" data-facebook="joao.franciscocarv"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="10" data-toggle="tooltip" data-placement="bottom" data-title="João Santos" data-description="Senior Video & Media Manager"></div>
+										<div class="head-image" data-image-num="10" data-toggle="tooltip" data-placement="bottom" data-title="João Santos" data-description="Senior Video & Media Manager" data-mail="joaosantos"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="9" data-toggle="tooltip" data-placement="bottom" data-title="Mafalda Rodrigues" data-description="Sponsor Manager"></div>
+										<div class="head-image" data-image-num="9" data-toggle="tooltip" data-placement="bottom" data-title="Mafalda Rodrigues" data-description="Sponsor Manager" data-mail="mafalda"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="8" data-toggle="tooltip" data-placement="bottom" data-title="Manuel Serra Nunes" data-description="Front-end Coder"></div>
+										<div class="head-image" data-image-num="8" data-toggle="tooltip" data-placement="bottom" data-title="Manuel Serra Nunes" data-description="Front-end Coder" data-mail="manuel"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="7" data-toggle="tooltip" data-placement="bottom" data-title="Maria Leonor Narciso" data-description="Innovation Manager"></div>
+										<div class="head-image" data-image-num="7" data-toggle="tooltip" data-placement="bottom" data-title="Maria Leonor Narciso" data-description="Innovation Manager" data-mail="leonor"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="6" data-toggle="tooltip" data-placement="bottom" data-title="Miguel Pereira" data-description="Innovation Manager"></div>
+										<div class="head-image" data-image-num="6" data-toggle="tooltip" data-placement="bottom" data-title="Miguel Pereira" data-description="Innovation Manager" data-mail="miguel"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="5" data-toggle="tooltip" data-placement="bottom" data-title="Pedro Graça" data-description="Sponsor Manager"></div>
+										<div class="head-image" data-image-num="5" data-toggle="tooltip" data-placement="bottom" data-title="Pedro Graça" data-description="Sponsor Manager" data-mail="pedro"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="4" data-toggle="tooltip" data-placement="bottom" data-title="Rafael Belchior" data-description="Front-end Coder"></div>
+										<div class="head-image" data-image-num="4" data-toggle="tooltip" data-placement="bottom" data-title="Rafael Belchior" data-description="Front-end Coder" data-mail="rafael"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="3" data-toggle="tooltip" data-placement="bottom" data-title="Raquel Silva" data-description="Visual Designer"></div>
+										<div class="head-image" data-image-num="3" data-toggle="tooltip" data-placement="bottom" data-title="Raquel Silva" data-description="Visual Designer" data-mail="raquel"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="2" data-toggle="tooltip" data-placement="bottom" data-title="Rita Barreiros" data-description="Team Engagement Guru"></div>
+										<div class="head-image" data-image-num="2" data-toggle="tooltip" data-placement="bottom" data-title="Rita Barreiros" data-description="Team Engagement Guru" data-mail="rita"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="1" data-toggle="tooltip" data-placement="bottom" data-title="Valentina Carvalho" data-description="Sponsor Manager"></div>
+										<div class="head-image" data-image-num="1" data-toggle="tooltip" data-placement="bottom" data-title="Valentina Carvalho" data-description="Sponsor Manager" data-mail="valentina"></div>
 									</div>
 								</div>
 							</div>
@@ -712,7 +711,7 @@
 									<a data-artist-name="helenagomes">Helena Gomes</a> 
 								</p>
 								<p class="excerpt">
-									Helena Gomes presents in this TEDx talk an application of an existing technology, hyperspectral imaging, to a different use: monitor and cleanup of contaminated soils, with lower costs.
+									Helena Gomes presents an application of hyperspectral imaging to a different use: cleanup of contaminated soils.
 								</p>
 							</div>
 						</div>
@@ -776,7 +775,7 @@
 									<a data-artist-name="mariacarreira">Maria Carreira</a> 
 								</p>
 								<p class="excerpt">
-									In this talk, Maria explains high performance settings that facilitate sharing and acquisition of knowledge, enabling students, teachers and researchers to undergo transformative learning experiences.
+									Maria explains high performance settings that facilitate sharing and acquisition of knowledge, enabling students, teachers and researchers to undergo transformative learning experiences.
 								</p>
 							</div>
 						</div>
@@ -792,7 +791,7 @@
 									<a data-artist-name="mariaribeiro">Maria Alice Ribeiro</a> 
 								</p>
 								<p class="excerpt">
-									Maria Alice Ribeiro addresses the need of creating accessibility from the beginning of content production: simplify and systematize information for different users, and provide instructions on different media.
+									Maria Alice Ribeiro addresses the need of creating accessibility from the beginning of content production, by simplifying and systematizing information for users.
 								</p>
 							</div>
 						</div>
