--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <meta property="og:title" content="TEDxISTAlameda"/>
         <meta property="og:type" content="website"/>
         <meta property="og:site_name" content="TEDxISTAlameda"/>
-        <meta property="og:url" content="https://tedxistalameda.com/"/>
-        <!--<meta property="og:image" content="https://tedxistalameda.com/images/tedxistalameda_social.jpg"/>-->
-        <meta property="og:description" content="TEDxISTAlameda."/>
+        <meta property="og:url" content="https://www.tedxistalameda.com/"/>
+        <meta property="og:image" content="https://www.tedxistalameda.com/images/_tedxistalameda_social.jpg"/>
+        <meta property="og:description" content="Learn from the present to focus on the future"/>
         <meta name="twitter:card" content="summary"/>
-        <meta name="twitter:description" content="TEDxISTAlameda."/>
+        <meta name="twitter:description" content="Learn from the present to focus on the future"/>
         <meta name="twitter:title" content="TEDxISTAlameda"/>
         <meta name="twitter:site" content="@TEDxISTAlameda"/>
-        <!--<meta name="twitter:image" content="https://tedxistalameda.com/images/tedxistalameda_social.jpg"/> -->        
+        <meta name="twitter:image" content="https://www.tedxistalameda.com/images/_tedxistalameda_social.jpg"/>      
 
 		<link rel="stylesheet" type="text/css" href="ButtonComponentMorph/css/component.css" />
 		<link rel="stylesheet" type="text/css" href="ButtonComponentMorph/css/content.css" />
