Fixed bug that prevented displaying images on Safari.

--- a/index.html
+++ b/index.html
@@ -20,17 +20,9 @@
         <meta name="twitter:title" content="TEDxISTAlameda"/>
         <meta name="twitter:site" content="@TEDxISTAlameda"/>
         <meta name="twitter:image" content="https://www.tedxistalameda.com/images/_tedxistalameda_social.jpg"/>      
-
-		<link rel="stylesheet" type="text/css" href="ButtonComponentMorph/css/component.css" />
-		<link rel="stylesheet" type="text/css" href="ButtonComponentMorph/css/content.css" />
-        <script src="ButtonComponentMorph/js/modernizr.custom.js"></script>
-        
-        <link href='http://fonts.googleapis.com/css?family=Raleway:400,800,300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="HoverEffectIdeas/css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="HoverEffectIdeas/css/set1.css" />
 		
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link href="css/tedxistalameda.css" rel="stylesheet" type='text/css'>
+		<link href="css/bootstrap.min.css" rel="stylesheet" type='text/css'>
+		<link href="css/tedxistalameda.css" rel="stylesheet" type='text/css'>
 		<link href="css/team.css" rel="stylesheet" type='text/css'>
 
 	</head>
@@ -228,7 +220,7 @@
 							<div class="row_second">
 								<div class="head-team">
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="28" data-toggle="tooltip" data-placement="bottom" data-title="Ana Carvalho" data-description="Social Media Hacker" data-mail="anacarvalho"></div>
+										<div class="head-image" data-image-num="28" data-toggle="tooltip" data-placement="bottom" data-title="Ana Carvalho" data-description="Social Media Hacker" data-mail="anacarvalho" data-linkedin="anagoncalvescrvlh" data-facebook="AnaPSGCarvalho"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
                                     	<div class="head-image" data-image-num="27" data-toggle="tooltip" data-placement="bottom" data-title="André Ferreira" data-description="Curator" data-mail="andre" data-linkedin="andrecnf" data-facebook="andrecnf"></div>
@@ -246,7 +238,7 @@
 										<div class="head-image" data-image-num="23" data-toggle="tooltip" data-placement="bottom" data-title="Catarina Silveira" data-description="Visual Designer" data-mail="catarina"></div>							
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="22" data-toggle="tooltip" data-placement="bottom" data-title="Cátia Fortunato" data-description="Video & Media Designer" data-mail="catia"></div>							
+										<div class="head-image" data-image-num="22" data-toggle="tooltip" data-placement="bottom" data-title="Cátia Fortunato" data-description="Video & Media Designer" data-mail="catia" data-linkedin="c%C3%A1tia-fortunato-253724133" data-facebook="catia.fortunato.5"></div>							
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
 										<div class="head-image" data-image-num="21" data-toggle="tooltip" data-placement="bottom" data-title="Filipa Catarro" data-description="Curator" data-mail="filipa"></div>								
@@ -282,10 +274,10 @@
 										<div class="head-image" data-image-num="11" data-toggle="tooltip" data-placement="bottom" data-title="João Carvalho" data-description="Curator" data-mail="joaocarv" data-linkedin="joao-borges-s-carvalho" data-facebook="joao.franciscocarv"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="10" data-toggle="tooltip" data-placement="bottom" data-title="João Santos" data-description="Senior Video & Media Manager" data-mail="joaosantos"></div>
+										<div class="head-image" data-image-num="10" data-toggle="tooltip" data-placement="bottom" data-title="João Santos" data-description="Senior Video & Media Manager" data-mail="joaosantos" data-linkedin="jrmsantos" data-facebook="jsantos15"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="9" data-toggle="tooltip" data-placement="bottom" data-title="Mafalda Rodrigues" data-description="Sponsor Manager" data-mail="mafalda"></div>
+										<div class="head-image" data-image-num="9" data-toggle="tooltip" data-placement="bottom" data-title="Mafalda Rodrigues" data-description="Sponsor Manager" data-mail="mafalda" data-linkedin="mafalda-rodrigues-5b05b4123" data-facebook="mafalda.rodrigues.1441"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
 										<div class="head-image" data-image-num="8" data-toggle="tooltip" data-placement="bottom" data-title="Manuel Serra Nunes" data-description="Front-end Coder" data-mail="manuel"></div>
@@ -297,19 +289,19 @@
 										<div class="head-image" data-image-num="6" data-toggle="tooltip" data-placement="bottom" data-title="Miguel Pereira" data-description="Innovation Manager" data-mail="miguel"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="5" data-toggle="tooltip" data-placement="bottom" data-title="Pedro Graça" data-description="Sponsor Manager" data-mail="pedro"></div>
+										<div class="head-image" data-image-num="5" data-toggle="tooltip" data-placement="bottom" data-title="Pedro Graça" data-description="Sponsor Manager" data-mail="pedro" data-linkedin="pedromgraca" data-facebook="pedro.graca.14"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
 										<div class="head-image" data-image-num="4" data-toggle="tooltip" data-placement="bottom" data-title="Rafael Belchior" data-description="Front-end Coder" data-mail="rafael"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="3" data-toggle="tooltip" data-placement="bottom" data-title="Raquel Silva" data-description="Visual Designer" data-mail="raquel"></div>
+										<div class="head-image" data-image-num="3" data-toggle="tooltip" data-placement="bottom" data-title="Raquel Silva" data-description="Visual Designer" data-mail="raquel" data-linkedin="raquelpcps" data-facebook="raquel.silva.16547"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="2" data-toggle="tooltip" data-placement="bottom" data-title="Rita Barreiros" data-description="Team Engagement Guru" data-mail="rita"></div>
+										<div class="head-image" data-image-num="2" data-toggle="tooltip" data-placement="bottom" data-title="Rita Barreiros" data-description="Team Engagement Guru" data-mail="rita" data-linkedin="rita-barreiros-58a62b10b" data-facebook="rita.barreiros.31"></div>
 									</div>
 									<div class="image-holder" data-toggle="collapse" data-target=".head-info">
-										<div class="head-image" data-image-num="1" data-toggle="tooltip" data-placement="bottom" data-title="Valentina Carvalho" data-description="Sponsor Manager" data-mail="valentina"></div>
+										<div class="head-image" data-image-num="1" data-toggle="tooltip" data-placement="bottom" data-title="Valentina Carvalho" data-description="Sponsor Manager" data-mail="valentina" data-linkedin="valentina-carvalho-79258b120" data-facebook="valentina.carvalho.9"></div>
 									</div>
 								</div>
 							</div>
@@ -484,8 +476,6 @@
 								<div class="intro_title" style="font-size:30px;color:#292929">Our partners will be announced soon.</div>
 							</div>						
 						</div>
-						<!--div class="item_section">
-						</div-->
 						<!-- FOOTER-->
 						<div class="page_footer">
 							<div class="footer_title">
@@ -917,7 +907,7 @@
 		
 		<!-- jQuery -->
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    	<script src="js/bootstrap.min.js"></script>
 	
 		<!-- Codebird.js - required for TWITTER -->
 		<script src="js/codebird-js/codebird.js"></script>
@@ -1027,7 +1017,6 @@
 			// Updates social-feed
 			updateFeed();
 
-		
 			// Countdown funciton
 			jQuery(".countdown").countdown();
 
@@ -1042,77 +1031,6 @@
 			// Prevents actions from left-right keys when nav is on
 			// TO DO
 		});			
-		</script>
-        
-        <script src="ButtonComponentMorph/js/classie.js"></script>
-		<script src="ButtonComponentMorph/js/uiMorphingButton_fixed.js"></script>
-		<script>
-			(function() {	
-				var docElem = window.document.documentElement, didScroll, scrollPosition;
-
-				// trick to prevent scrolling when opening/closing button
-				function noScrollFn() {
-					window.scrollTo( scrollPosition ? scrollPosition.x : 0, scrollPosition ? scrollPosition.y : 0 );
-				}
-
-				function noScroll() {
-					window.removeEventListener( 'scroll', scrollHandler );
-					window.addEventListener( 'scroll', noScrollFn );
-				}
-
-				function scrollFn() {
-					window.addEventListener( 'scroll', scrollHandler );
-				}
-
-				function canScroll() {
-					window.removeEventListener( 'scroll', noScrollFn );
-					scrollFn();
-				}
-
-				function scrollHandler() {
-					if( !didScroll ) {
-						didScroll = true;
-						setTimeout( function() { scrollPage(); }, 60 );
-					}
-				};
-
-				function scrollPage() {
-					scrollPosition = { x : window.pageXOffset || docElem.scrollLeft, y : window.pageYOffset || docElem.scrollTop };
-					didScroll = false;
-				};
-
-				scrollFn();
-
-				var UIBtnn = new UIMorphingButton( document.querySelector( '.morph-button' ), {
-					closeEl : '.icon-close',
-					onBeforeOpen : function() {
-						// don't allow to scroll
-						noScroll();
-					},
-					onAfterOpen : function() {
-						// can scroll again
-						canScroll();
-					},
-					onBeforeClose : function() {
-						// don't allow to scroll
-						noScroll();
-					},
-					onAfterClose : function() {
-						// can scroll again
-						canScroll();
-					}
-				} );
-
-				document.getElementById( 'terms' ).addEventListener( 'change', function() {
-					UIBtnn.toggle();
-				} );
-			})();
-		</script>
-        <script>
-			// For Demo purposes only (show hover effect on mobile devices)
-			[].slice.call( document.querySelectorAll('a[href="#"') ).forEach( function(el) {
-				el.addEventListener( 'click', function(ev) { ev.preventDefault(); } );
-			} );
 		</script>
     </body>
 </html>
