--- a/index.html
+++ b/index.html
@@ -1036,20 +1036,20 @@
 					// FACEBOOK
 					facebook: {
 						accounts: ['@tedxistalameda','#tedxistalameda'],
-						limit: lim,
+						limit: 6,
 						access_token: '973206692813424|31d18a9adee673356307c33fe7a2accf'
 					},
 					// Twitter
 					twitter: {
-						accounts: ['@tedxistalameda','#tedxistalameda'],
-						limit: lim,
+						accounts: ['@tedxistalameda','#tedxistalameda'], 
+						limit: 6,
 						consumer_key: 'Wtt1XYDBq8JzYfhmXMa5Gx3bj', // make sure to have your app read-only
 						consumer_secret: 'wmpzZKxgSwI3ogkAo111JmiwcYLzX61ZhlDQffrvq7QTENR1NB', // make sure to have your app read-only
 					},
-					// INSTAGRAM
+					// INSTAGRAMs
 					instagram: {
 						accounts: ['@tedxistalameda','#tedxistalameda'],
-						limit: lim,
+						limit: 4,
 						user_id: '2957809458',
 						access_token: '2957809458.2115149.f46ae62caa954c1d84e5eb1a0f2c899e'
 					},
@@ -1060,7 +1060,7 @@
 					//update_period: 3600,
 					date_local: "en",
 					template_html:
-					'<div class="social-feed-element{{? !it.moderation_passed}}hidden{{?}}" dt-create="{{=it.dt_create}}" social-feed-id = "{{=it.social_network}}"> \
+					'<div class="social-feed-element{{? !it.moderation_passed}}hidden{{?}}" dt-create="{{=it.dt_create}}" social-feed-id="{{=it.id}}"> \
 						<div class="top_news"> \
 							<a href="{{=it.author_link}}" target="_blank"> \
 								<img class="media-object" src="{{=it.author_picture}}"/> \
@@ -1092,11 +1092,10 @@
 			};
 			
 			// Updates social-feed
-			var lim = 5;
-			updateFeed(lim);
+			updateFeed();
 			
-			/* Button update social-feed
-			$(".social_feed_button").click(function() {
+			// Button update social-feed
+			/*$(".social_feed_button").click(function() {
 				lim += 1;
   				updateFeed(lim);
 				document.querySelector(".list_item").open();
